fixed landing scrollbar

--- a/index.css
+++ b/index.css
@@ -98,9 +98,9 @@ body {
   overflow: auto;
 }
 
-*::-webkit-scrollbar {
+/* *::-webkit-scrollbar {
   display: none;
-}
+} */
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
